Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7152

sanity-hsm test_24a:FAIL: restore changed ctime from 1442224769 to 1442224774

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.9.0
    • Lustre 2.8.0, Lustre 2.9.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for wangdi <di.wang@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/01ca7010-5adb-11e5-8250-5254006e85c2.

      The sub-test test_24a failed with the following error:

      restore changed ctime from 1442224769 to 1442224774
      
      Updated after 4s: wanted 'SUCCEED' got 'SUCCEED'
       sanity-hsm test_24a: @@@@@@ FAIL: restore changed ctime from 1442224769 to 1442224774 
        Trace dump:
        = /usr/lib64/lustre/tests/test-framework.sh:4748:error_noexit()
        = /usr/lib64/lustre/tests/test-framework.sh:4779:error()
        = /usr/lib64/lustre/tests/sanity-hsm.sh:1885:test_24a()
        = /usr/lib64/lustre/tests/test-framework.sh:5026:run_one()
        = /usr/lib64/lustre/tests/test-framework.sh:5063:run_one_logged()
        = /usr/lib64/lustre/tests/test-framework.sh:4928:run_test()
        = /usr/lib64/lustre/tests/sanity-hsm.sh:1906:main()
      Dumping lctl log to /logdir/test_logs/2015-09-14/lustre-reviews-el6_7-x86_64--review-zfs-part-1--1_8_1__34565__-69995637337060-051354/sanity-hsm.test_24a.*.1442224778.log
      CMD: shadow-40vm3,shadow-40vm4,shadow-40vm5,shadow-40vm6.shadow.whamcloud.com /usr/sbin/lctl dk > /logdir/test_logs/2015-09-14/lustre-reviews-el6_7-x86_64--review-zfs-part-1--1_8_1__34565__-69995637337060-051354/sanity-hsm.test_24a.debug_log.\$(hostname -s).1442224778.log;
               dmesg > /logdir/test_logs/2015-09-14/lustre-reviews-el6_7-x86_64--review-zfs-part-1--1_8_1__34565__-69995637337060-051354/sanity-hsm.test_24a.dmesg.\$(hostname -s).1442224778.log
      CMD: shadow-40vm5 pkill -INT -x lhsmtool_posix
      CMD: shadow-40vm5 pgrep -x lhsmtool_posix
      

            jhammond John Hammond
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: