LU-7152 hsm: sync volatile file before setting times

In the restore case of llapi_hsm_action_end() call fsync() on the
volatile file before updating its timestamps. This prevents spurious
{a,m,c}times from fsync(). Correct a related comment in sanity-hsm
test_24a().

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I982dfd49cbb7d6f9cd7d569e834e4e0581e4bdc9
Reviewed-on: http://review.whamcloud.com/19441
Tested-by: Jenkins
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Faccini Bruno <bruno.faccini@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>